<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>dwayne_nav</name>
  <version>0.1.0</version>
  <description>
    some basic function
  </description>
  <maintainer email="ebesin@outlook.com">dwayne</maintainer>
  <license>TODO: License declaration</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>ackermann_msgs</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>sensor_msgs</depend>
  <depend>nav2_util</depend>
  <depend>navigation2</depend>
  <exec_depend>slam_toolbox</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>