<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>guided_hybrid_planner</name>
  <version>0.1.0</version>
  <description>
    some basic function
  </description>
  <maintainer email="ebesin@outlook.com">dwayne</maintainer>
  <license>TODO: License declaration</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>sensor_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>nav2_util</depend>
  <depend>utils_tool</depend>
  <depend>ilqr_planner</depend>
  <depend>navigation2</depend>
  <depend>nav2_core</depend>
  <depend>nav2_smac_planner</depend>
  <depend>ompl</depend>
  <depend>angles</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
