<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mpc_follower</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="ebesin@outlook.com">dwayne</maintainer>
  <license>TODO: License declaration</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
  <!-- <depend>OsqpEigen</depend> -->
  <depend>rclcpp</depend>
  <depend>mpc_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>osqp_vendor</depend>
  <depend>eigen</depend>
  <depend>tier4_debug_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>diagnostic_msgs</depend>
  <depend>unique_identifier_msgs</depend>
  <!-- <depend>PCL</depend> -->
  <depend>pcl_conversions</depend>
  <depend>libpcl-all-dev</depend>
  <depend>tf2_ros</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>nav2_util</depend>
  <depend>nav2_common</depend>
</package>